No fixed footer on mobile.

--- a/sites/all/themes/custom/capl/assets/css/style.css
+++ b/sites/all/themes/custom/capl/assets/css/style.css
@@ -576,36 +576,38 @@ a:hover {
   clear: both;
 }
 
-/* line 4, ../sass/partials/_footer.scss */
-.front .footer {
-  background: white;
-  bottom: 0;
-  position: fixed;
-  width: 100%;
+@media (min-width: 481px) {
+  /* line 4, ../sass/partials/_footer.scss */
+  .front .footer {
+    background: white;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+  }
 }
 
-/* line 11, ../sass/partials/_footer.scss */
+/* line 13, ../sass/partials/_footer.scss */
 .footer .container {
   border-top: 4px solid black;
 }
 
-/* line 16, ../sass/partials/_footer.scss */
+/* line 18, ../sass/partials/_footer.scss */
 #block-menu-menu-footer-menu {
   -webkit-column-count: 2;
   -moz-column-count: 2;
   column-count: 2;
   padding-top: 1em;
 }
-/* line 21, ../sass/partials/_footer.scss */
+/* line 23, ../sass/partials/_footer.scss */
 #block-menu-menu-footer-menu ul {
   margin-top: 0;
   padding: 0;
 }
-/* line 24, ../sass/partials/_footer.scss */
+/* line 26, ../sass/partials/_footer.scss */
 #block-menu-menu-footer-menu ul li.leaf {
   list-style: none;
 }
-/* line 28, ../sass/partials/_footer.scss */
+/* line 30, ../sass/partials/_footer.scss */
 #block-menu-menu-footer-menu a {
   color: black;
   font-weight: bold;
