--- a/sites/all/themes/custom/capl/assets/sass/partials/_footer.scss
+++ b/sites/all/themes/custom/capl/assets/sass/partials/_footer.scss
@@ -2,10 +2,12 @@
 // --------------------------------------------------------
 
 .front .footer {
-  background: white;
-  bottom: 0;
-  position: fixed;
-  width: 100%;
+  @include breakpoint($gthand) {
+    background: white;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+  }
 }
 .footer {
   .container {
